# tree2code

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CI_CD.md  pyspark_parity_report.json  pyspark_parity_report.md  testdata_parity_report.md
docs/sql_compare/: lgb_sql_consistency_report.json  lgb_sql_consistency_report.md  lgb_tree2code_hive.sql  lgb_tree_value_diff_report.json  lgb_tree_value_diff_report.md  lgb_treemodel2sql.sql
manual_tests/: README.md  test_pmml_real_data_script.py
notebook/: pyspark_parity_test.ipynb
scratch/: verify_ddl.py
scripts/: compare_lgb_sql_consistency.py  compare_sql_tree_values.py  matrix_smoke.py  pmml_real_data_check.py  run_pyspark_parity.py  run_testdata_parity.py  run_version_matrix.py
src/tree2code/: __init__.py  api.py  ir.py  parsers.py  render_pmml.py  render_python.py  render_sql.py  scoring.py
tests/: conftest.py  test_api_contract.py  test_categorical_support.py  test_compare_sql_tree_values.py  test_missing_type_none.py  test_pmml_rendering.py  test_psql_integration.py  test_pyspark_parity.py  test_python_parity.py  test_score_and_abnormal.py  test_sql_rendering.py
